Nrepl cider ops (#2108)